# oecd-pisa-albania

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
configs/: data.yaml  experiment.yaml  features.yaml  models.yaml
notebooks/: 01_eda_albania.ipynb  02_crisis_in_context.ipynb  02_eda_comparative.ipynb  03_covariate_shift.ipynb  03_modeling.ipynb  04_explainability.ipynb  04_modeling.ipynb  05_cross_country.ipynb  05_explainability.ipynb  06_explainability_cases.ipynb  06_the_ceiling.ipynb  07_fairness.ipynb  08_comparative.ipynb  08_decision_support.ipynb  09_crisis_robustness.ipynb  09_forecast_2026.ipynb  10_forecast_2026.ipynb  10_stacking_ensemble.ipynb  11_screener_multilevel.ipynb  12_school_questionnaire.ipynb  13_decision_support.ipynb  14_causal_earthquake.ipynb  15_ceiling_generalization.ipynb  16_process_modality.ipynb  17_fairness_mitigation.ipynb  18_coverage_bounds.ipynb  _build_notebooks.py  _formulas.py
scripts/: build_school_questionnaire.py  export_dashboard_model.py  generate_badges.py  replot_paper_figures.py  run_causal_did.py  run_ceiling_generalization.py  run_comparative_modeling.py  run_conformal.py  run_counterfactuals.py  run_coverage_bounds.py  run_decision_curve.py  run_explainability_cases.py  run_fairness_audit.py  run_fairness_mitigation.py  run_geographic_equity.py  run_hpo.py  run_levers.py  run_model_comparison.py  run_multilevel.py  run_oos_experiment.py  run_policy.py  run_process_modality.py  run_pv_stacking_experiment.py  (+7 more)
(+142 files in other folders)
