[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "oecd-pisa-albania"
version = "0.1.0"
description = "Predicting Albanian Student Low-Proficiency Risk Using OECD PISA Data (2009-2022)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "optuna>=3.5",
    "shap>=0.44",
    "imbalanced-learn>=0.11",
    "umap-learn>=0.5",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pyreadstat>=1.2",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.1", "mypy>=1.6"]
dl = ["pytorch-tabnet>=4.1"]
dashboard = ["streamlit>=1.30", "altair>=5.0", "fpdf2>=2.7"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
